--- a/i3/config
+++ b/i3/config
@@ -36,8 +36,8 @@ bindsym $mod+Shift+Return exec $term2
 bindsym $mod+Shift+q kill
 
 # File manager with mod+e
-bindsym $mod+e exec $fmanager 
-bindsym $mod+Shift+e exec urxvt -e ranger
+bindsym $mod+Shift+e exec $fmanager 
+bindsym $mod+e exec alacritty -e ranger
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 # change focus
@@ -125,13 +125,13 @@ bindsym $mod+Shift+0 move container to workspace 10
 workspace 1 output HDMI-1
 workspace 2 output VGA-1
 workspace 3 output HDMI-1
-workspace 4 output HDMI-1
-workspace 5 output VGA-1
+workspace 4 output VGA-1
+workspace 5 output HDMI-1
 workspace 6 output VGA-1
-workspace 7 output eDP-1
-workspace 8 output eDP-1
-workspace 9 output HDMI-1
-workspace 10 output VGA-1
+workspace 7 output HDMI-1
+workspace 8 output VGA-1
+workspace 9 output eDP-1
+workspace 10 output eDP-1
 
 assign [class="Firefox"] $workspace1
 assign [class="Hexchat"] $workspace2
@@ -143,7 +143,7 @@ assign [class="Gnome-terminal"] $workspace4
 assign [class="Steam"] $workspace7
 assign [class="MATLAB R2017a"] $workspace3
 assign [class="Zotero"] $workspace9
-assign [class="Zathura"] $workspace3
+# assign [class="Zathura"] $workspace3
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -222,6 +222,10 @@ exec --no-startup-id compton --config ~/.config/compton.conf -b
 bindsym XF86AudioRaiseVolume exec amixer set Master -q 5%+
 bindsym XF86AudioLowerVolume exec amixer set Master -q 5%-
 # Status bar uses custom script
+
+# Theme
+
+# Status bar uses custom script
 set $bg  #323232
 set $bgu #323232
 set $fg  #ffffff
@@ -236,7 +240,7 @@ set $gray #333333
 client.focused $blue $blue #ffffff $blue $blue
 client.unfocused $gray $gray #ffffff $gray $gray
 client.focused_inactive $gray $gray #ffffff $gray $gray
-
+ 
 # floating stuff by default
 for_window [class="feh"] floating enable
 for_window [class="mpv"] floating enable
